# nostr_world_computer

./: Cargo.toml  README.md  build.sh
docs/: index.html
src/: lib.rs
