[package]
name = "world_computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
strip = true
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
incremental = false
